<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:context=".CreateEventActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_plan_11"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="@+id/setEventName" />

        <EditText
            android:id="@+id/setEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开始日期"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <TextView
            android:id="@+id/setDateTextView1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="#E2E2E6"
            android:gravity="right"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline32"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/createEventChoosebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline36">

            <RadioButton
                android:id="@+id/createEventChoose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="学习"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/createEventChoose2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="娱乐"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/createEventChoose3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="运动"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/createEventChoose4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="阅读"
                android:textSize="24sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/setTimeTextView1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#E2E2E6"
            android:gravity="right"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintEnd_toEndOf="@+id/setDateTextView2" />

        <TextView
            android:id="@+id/setDateTextView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#E2E2E6"
            android:gravity="right"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintEnd_toEndOf="@+id/setDateTextView1" />

        <TextView
            android:id="@+id/setTimeTextView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#E2E2E6"
            android:gravity="right"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintEnd_toEndOf="@+id/setTimeTextView1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="结束日期"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline33"
            app:layout_constraintStart_toStartOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_plan_14"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline34"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_plan_15"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline35"
            app:layout_constraintStart_toStartOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:text="@string/day_plan_16"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline36"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.41" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <Button
            android:id="@+id/createEvent_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="新建"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:text="重复"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/weekCheck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/week_2"
            app:layout_constraintBottom_toTopOf="@+id/guideline39"
            app:layout_constraintEnd_toStartOf="@+id/guideline37" />

        <CheckBox
            android:id="@+id/weekCheck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/week_4"
            app:layout_constraintBottom_toTopOf="@+id/guideline39"
            app:layout_constraintStart_toEndOf="@+id/weekCheck3" />

        <CheckBox
            android:id="@+id/weekCheck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/week_3"
            app:layout_constraintBottom_toTopOf="@+id/guideline39"
            app:layout_constraintStart_toStartOf="@+id/guideline37" />

        <CheckBox
            android:id="@+id/weekCheck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/week_1"
            app:layout_constraintBottom_toTopOf="@+id/guideline39"
            app:layout_constraintEnd_toStartOf="@+id/weekCheck2" />

        <CheckBox
            android:id="@+id/weekCheck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/week_5"
            app:layout_constraintEnd_toStartOf="@+id/weekCheck6"
            app:layout_constraintTop_toTopOf="@+id/guideline39" />

        <CheckBox
            android:id="@+id/weekCheck7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/week_7"
            app:layout_constraintStart_toEndOf="@+id/weekCheck6"
            app:layout_constraintTop_toTopOf="@+id/guideline39" />

        <CheckBox
            android:id="@+id/weekCheck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>